# langchain-prompt-injection

./: .env.example  .gitignore  CITATION.cff  LICENSE  Makefile  README.md  THREAT_MODEL.md  check_nb02.py  final_validation.py  fix_nb02.py  fix_nb05.py  fix_nb_paths.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_balanced_evaluation_v4.py  run_notebooks.py
data/: README.md
data/benign/: SOURCES.md  benign_corpus.jsonl  benign_corpus_v2.jsonl  benign_real_v2.jsonl
data/real/: SOURCES.md  benign_real.jsonl  injections_real.jsonl  injections_real_v2.jsonl
data/sample/: benign.jsonl  injections.jsonl
data/synthetic/: benign.jsonl  injections.jsonl
demo/: demo_annotate.py  demo_block.py  demo_rag_pipeline.py
evaluation_outputs/: balanced_evaluation_report.md  errors.json  per_category.json  pr_curve.json  results.json  threshold_sweep.json  thresholds.json
notebooks/: 01_detector_experiments.ipynb  02_policy_evaluation.ipynb  03_agent_integration_demo.ipynb  04_rag_injection_testing.ipynb  05_evaluation_metrics.ipynb
reports/: benchmark_research.csv  benchmark_research.json  category_breakdown_research.csv  failure_analysis.json
scripts/: build_real_datasets_and_evaluate.py  check_dataset_integrity.py  download_datasets.sh  generate_sample_data.py  run_evaluation.py  run_external_raw_research_eval.py  run_notebooks.sh  run_research_eval.py
src/prompt_injection/: __init__.py  detector.py  exceptions.py  middleware.py  patterns.py  policy.py
src/prompt_injection/evaluation/: __init__.py  benchmark.py  dataset.py  metrics.py  performance.py  real_dataset.py  report.py
tests/integration/: test_agent_integration.py  test_langchain_realism.py
tests/unit/: test_detector.py  test_middleware.py  test_patterns.py  test_policy.py
tests/unit/evaluation/: test_benchmark.py  test_dataset.py  test_metrics.py  test_performance.py  test_real_dataset.py
