[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "langchain-prompt-injection"
version = "0.1.0"
description = "Production-ready prompt-injection detection middleware for LangChain with three-configuration ablation, evaluation suite, and threat-model documentation."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Ali Akarma" }]
keywords = [
    "prompt-injection", "langchain", "llm-security",
    "ai-safety", "guardrails", "middleware",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"

# Runtime: only stdlib + scikit-learn for Config C
# LangChain is optional (middleware degrades gracefully without it)
dependencies = [
    "scikit-learn>=1.3",
    "numpy>=1.24",
]

[project.optional-dependencies]
langchain = [
    "langchain>=0.3",
    "langchain-core>=0.3",
]
openai = [
    "langchain>=0.3",
    "langchain-openai>=0.1",
    "python-dotenv>=1.0",
]
notebooks = [
    "jupyter>=1.0",
    "notebook>=7.0",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "pandas>=2.0",
    "ipykernel>=6.0",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.8",
    "nbformat>=5.9",
    "scikit-learn>=1.3",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "pandas>=2.0",
]

[project.urls]
Repository   = "https://github.com/aliakarma/langchain-prompt-injection"
Issues       = "https://github.com/aliakarma/langchain-prompt-injection/issues"

# ── Tool configuration ─────────────────────────────────────────────────────

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

# ── pytest ─────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths     = ["tests"]
python_files  = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts       = "-v --tb=short"

# ── ruff (lint + format) ────────────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "PTH"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

# ── mypy ────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version          = "3.10"
strict                  = false
ignore_missing_imports  = true
warn_return_any         = false
warn_unused_ignores     = true
